2012-06-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dt2dv.c, dv2dt.c: Drop the problematic prototype for isatty(),
	already declared in <unistd.h> or <kpathsea/c-fopen.h>.
	Use binary mode for output files.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2010-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dt2dv.c, dv2dt.c (SET_BINARY): Remove casts to void.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Remove '-DNO_DEBUG' ...
	* configure.ac: ... now added via KPSE_KPATHSEA_FLAGS.

2009-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.
	* dt2dv.c: Constify various global, stuct member, arg, and
	local strings.
	(progname, nfile, {dtl,dvi}_{fp,filename}):  Drop global
	initializers, they are initialized in main().
	(dvi_stdout, open_dtl, open_dvi, process, read_line_char,
	unread_char): Drop nested extern declarations for globals.
	(free_cmds): Rename arg cmd_table=>cmds, not to shadow a global.
	* dv2dt.c (struct op_info_st, struct op_table_st): Constify
	strings members.

2009-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): remove -DNeedFunctionPrototypes.

2009-06-10  Karl Berry  <karl@tug.org>

	* dt2dv.c: do not include timestamp in binary.

2009-06-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CFLAGS): enable compiler warnings.
	* dt2dv.c: #include <unistd.h> to declare isatty.
	* dv2dt.c: #include <unistd.h> to declare isatty.

2009-05-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system.

2008-02-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.in: added AC_CONFIG_HEADERS (moved
	from ../kpathsea/common.ac to here).

2008-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Convert from autoconf-2.13 to autoconf-2.59+:
	* Makefile.in: Add @configure_input@ line.
	* aclocal.m4 (new): Generated (aclocal -I ../m4).
	* configure: Regenerated (autoconf).

1998-10-22  Eli Zaretskii  <eliz@is.elta.co.il>
